samples/_failures_safe/1761160582_f4edec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e18b56ac.c: In function ‘main’:
./samples/SAFE/__tmp_e18b56ac.c:137:20: error: missing terminating " character
  137 |             printf("Error: First matrix columns must equal second
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e18b56ac.c:137:13: error: expected expression at end of input
  137 |             printf("Error: First matrix columns must equal second
      |             ^~~~~~
./samples/SAFE/__tmp_e18b56ac.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e18b56ac.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e18b56ac.c:137:13: error: expected declaration or statement at end of input
